enhances signup api, adds login API
